Fix display of new scrollbars

--- a/resources/CPE.css
+++ b/resources/CPE.css
@@ -1615,6 +1615,10 @@ position:relative;
 cursor:var(--cpe-default-cursor);
 }
 
+::-webkit-scrollbar-track {
+    margin:calc(var(--scrollbar-width) * -0.21875);
+}
+
 ::-webkit-scrollbar-thumb {
   background-color:var(--scrollbar-thumb-color-1);
   box-shadow:var(--threeD-shadow);
